# input-bridge

./: CMakeLists.txt  README.md  configure_devices.sh  input-bridge.service
src/: main.cpp
src/input/: config.cpp  config.hpp  input.hpp  linux_capture.cpp  macos_inject.cpp  stubs.hpp
src/network/: client.cpp  client.hpp  server.cpp  server.hpp
src/protocol/: input_event.hpp
